--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     endpointsServer project(path: ':backend', configuration: 'endpoints')
+    implementation project(':JavaJokes')
+
     implementation 'com.android.support:appcompat-v7:27.0.2'
 
+    // Added these 2 implementations to upgrade to latest versions
     implementation 'com.android.support:support-media-compat:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
+    //-------------------------------------------------------------
 
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
