--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+            flavorDimensions "free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+            flavorDimensions "paid"
+        }
+    }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/test'] } }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation project(':JavaJokes')
     implementation project(':androidjokes')
@@ -45,7 +58,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
     //-------------------------------------------------------------
 
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
@@ -55,4 +68,5 @@ dependencies {
     })
 
     testImplementation 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
 }
