--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,12 @@ android {
 
     productFlavors {
         free {
-            applicationId "com.udacity.gradle.builditbigger.free"
-            flavorDimensions "free"
+            applicationId 'com.udacity.gradle.builditbigger.free'
+            flavorDimensions 'free'
         }
         paid {
-            applicationId "com.udacity.gradle.builditbigger.paid"
-            flavorDimensions "paid"
+            applicationId 'com.udacity.gradle.builditbigger.paid'
+            flavorDimensions 'paid'
         }
     }
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/test'] } }
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
     //-------------------------------------------------------------
 
-    freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
