--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,3 +32,11 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
 }
+
+task handleAppEngine {
+    dependsOn(":backend:appengineStart", ":app:connectedAndroidTest")
+    tasks.getByPath(":app:connectedAndroidTest").mustRunAfter(":backend:appengineStart")
+    println("Test Completed")
+    finalizedBy(":backend:appengineStop")
+
+}
