--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
             applicationId 'com.udacity.gradle.builditbigger.free'
             flavorDimensions 'free'
             dependencies {
-                implementation 'com.google.android.gms:play-services-ads:11.8.0'
+                freeImplementation 'com.google.android.gms:play-services-ads:11.8.0'
             }
         }
         paid {
